added fix for pristimo composer

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "philippbaschke/acf-pro-installer",
-  "description": "An install helper for Advanced Custom Fields PRO",
+  "name": "iff-studio/acf-pro-installer",
+  "description": "An install helper for Advanced Custom Fields PRO. Forked from https://github.com/PhilippBaschke/acf-pro-installer",
   "type": "composer-plugin",
   "license": "MIT",
   "authors": [
