--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
     "wordpress", "composer", "wp", "plugin", "acf", "env", "pro"
   ],
   "require": {
-    "php": ">=5.5",
-    "composer-plugin-api": "^2.0",
+    "php": ">=7.2",
+    "composer-plugin-api": "^2.0"
     "vlucas/phpdotenv": "^2.2"
   },
   "require-dev": {
-    "composer/composer": "2.0.*",
+    "composer/composer": "^2.0",
     "phpunit/phpunit": "4.8.*",
     "squizlabs/php_codesniffer": "2.*",
     "satooshi/php-coveralls": "1.*"
