--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
   "require-dev": {
     "composer/composer": "^2.0",
     "phpunit/phpunit": "4.8.*",
-    "squizlabs/php_codesniffer": "2.*",
-    "satooshi/php-coveralls": "1.*"
+    "squizlabs/php_codesniffer": "^3.5.6",
+    "satooshi/php-coveralls": "2.*"
   },
   "autoload": {
     "psr-4": { "PhilippBaschke\\ACFProInstaller\\": "src/ACFProInstaller" }
