--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "vlucas/phpdotenv": "^2.2"
   },
   "require-dev": {
-    "composer/composer": "^2.0",
+    "composer/composer": "2.0.*",
     "phpunit/phpunit": "4.8.*",
     "squizlabs/php_codesniffer": "^3.5.6",
     "satooshi/php-coveralls": "2.*"
